Initial EDA notebook with data loading and summary stats

--- a/notebooks/insurance_analytics.ipynb
+++ b/notebooks/insurance_analytics.ipynb
@@ -44,9 +44,9 @@
    "id": "faa47fcd",
    "metadata": {},
    "source": [
-    "## 1.Data Understanding summarization \n",
-    "   **loading of Data**\n",
-    "   **and Understanding of data**"
+    "## 1.Data Understanding and summarization \n",
+    "   - loading of Data\n",
+    "   - Understanding of data"
    ]
   },
   {
@@ -285,8 +285,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f12af829",
+   "metadata": {},
+   "source": [
+    "## 2. Basic Statistical summarization\n",
+    "  - Data structure (to know what is column and Data types )"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "793c9ee5",
    "metadata": {},
    "outputs": [
@@ -359,9 +368,17 @@
     }
    ],
    "source": [
+    "# Print the column names and data types\n",
     "print(\"=== Data Structure ===\")\n",
-    "print(df.info())\n",
-    "# Print the column names and data types"
+    "print(df.info())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63ed30ce",
+   "metadata": {},
+   "source": [
+    "- Descriptive Statistics"
    ]
   },
   {
@@ -409,7 +426,67 @@
    "cell_type": "markdown",
    "id": "4a412fb3",
    "metadata": {},
-   "source": []
+   "source": [
+    "##   3.Data Quality Assasement\n",
+    " -  missing value in each document\n",
+    " -  Duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1154c87d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Missing Values ===\n",
+      "Bank                        145961\n",
+      "AccountType                  40232\n",
+      "MaritalStatus                 8259\n",
+      "Gender                        9536\n",
+      "mmcode                         552\n",
+      "VehicleType                    552\n",
+      "make                           552\n",
+      "Model                          552\n",
+      "Cylinders                      552\n",
+      "cubiccapacity                  552\n",
+      "kilowatts                      552\n",
+      "bodytype                       552\n",
+      "NumberOfDoors                  552\n",
+      "VehicleIntroDate               552\n",
+      "CustomValueEstimate         779642\n",
+      "CapitalOutstanding               2\n",
+      "NewVehicle                  153295\n",
+      "WrittenOff                  641901\n",
+      "Rebuilt                     641901\n",
+      "Converted                   641901\n",
+      "CrossBorder                 999400\n",
+      "NumberOfVehiclesInFleet    1000098\n",
+      "dtype: int64\n",
+      "Number of duplicates: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data Quality Assessment\n",
+    "print(\"\\n=== Missing Values ===\")\n",
+    "missing_values = df.isnull().sum()\n",
+    "print(missing_values[missing_values > 0])\n",
+    "# Check for duplicates\n",
+    "print(\"Number of duplicates:\", df.duplicated().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67215a50",
+   "metadata": {},
+   "source": [
+    "**Convert TransactionMonth to datetime**"
+   ]
   }
  ],
  "metadata": {
